[project]
name = "agent-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maheen-Sheikh", email = "you@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crawl4ai>=0.7.2",
]

[project.scripts]
agent-rag-chatbot = "agent_rag_chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
